force-app/main/default/objects/OpportunityLineItem/fields/byIntegration__c.field-meta.xml
<CustomField>
    <fullName>byIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>by Integration</label>
    <type>Checkbox</type>
</CustomField>