force-app/main/default/objects/OpportunityLineItem/fields/Composition__c.field-meta.xml
<CustomField>
	<fullName>Composition__c</fullName>
	<label>Composição</label>
	<referenceTo>Composition__c</referenceTo>
	<relationshipLabel>Opportunity Products</relationshipLabel>
	<relationshipName>OpportunityLineItems</relationshipName>
	<type>Lookup</type>
</CustomField>