force-app/main/default/objects/OpportunityLineItem/fields/Kit_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Kit_Instalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Instalacao</label>
    <referenceTo>Kit_Instalacao__c</referenceTo>
    <relationshipLabel>Produto do Kit</relationshipLabel>
    <relationshipName>Produto_de_oportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>